# Async_API_sprint_1

./: .env.example  .env.local  .env.local.example  .gitignore  Dockerfile  ETLTests.postman_collection.json  FastAPI.postman_collection.json  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
nginx/: Dockerfile  nginx.conf  site.conf
postgres_to_es/: .env.local  .env.prod  Dockerfile  backoff_dec.py  conditions.txt  extractor.py  load.py  main.py  models.py  requirements.txt  settings.ini  statemanager.py  transform.py
src/: main.py
src/api/: __init__.py
src/api/v1/: films.py  genres.py  persons.py
src/core/: config.py  logger.py
src/db/: elastic.py  redis.py
src/models/: base_model_improved.py  film.py  genre.py  person.py  validation.py
src/services/: film.py  genre.py  person.py
