[tool.poetry]
name = "async-api-sprint-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
redis = "4.4.2"
elasticsearch = "8.8.2"
fastapi = "0.100.1"
orjson = "^3.9.2"
pydantic = "2.0.3"
uvicorn = "^0.23.2"
uvloop = {version = "0.17.0", markers = 'sys_platform != "win32" and implementation_name == "cpython"'}
aiohttp = "^3.8.5"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.4.1"
autopep8 = "^2.0.2"
flake8-pytest-style = "^1.7.2"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
types-redis = "^4.6.0.4"
types-psycopg2 = "^2.9.21.11"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
